fixed spacing

--- a/style.css
+++ b/style.css
@@ -27,11 +27,7 @@ li{
 
 
 
-.previousLangExperience{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
+
 
 .logoSize{
     width: calc(20px + 4vw);
@@ -62,21 +58,81 @@ h1{
     font-size: calc(15px + 2vw);
 }
 
+.projectarea1{
+    background-color:grey;
+    overflow-x:hidden;
+    position:relative;
+    min-height: 35%;
+    max-height: 70%;
+    width: 86%;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 8vh;
+    margin-bottom: 8vh;
+    border: 2px solid #505654;
+    padding: 5px;
+    border-radius: 20px;
+    /* display: flex; */
+}
+
+.previousLangExperience{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+} 
+
 .text-contents{
     text-align: center;
     font-size: calc(25px + .6vw);
     width: 40%;
     float: left;
-    margin-left:7vh;
+    margin-left:7vw;
 }
+
+
+/* .programmingProjects{
+    text-align: center;
+    font-size: calc(25px + .6vw);
+    width: 40%;
+    float: right;
+    margin-left:7vh;
+} */
 
 .programmingProjects{
     text-align: center;
     font-size: calc(25px + .6vw);
     width: 40%;
     float: right;
-    margin-left:7vh;
+    margin-left:7vw;
 }
+
+@media (max-width: 550px) {
+
+    .text-contents{
+        text-align: center;
+        font-size: calc(25px + .6vw);
+        width: 80%;
+        /* margin-left:3vh; */
+
+
+    }
+
+    .programmingProjects{
+        text-align: center;
+        font-size: calc(25px + .6vw);
+        width: 80%;
+        padding-top: 400px;
+        float: none;
+
+
+    }
+
+    .invisHr{
+        border-bottom: 1px solid #000;
+    }
+}
+
+
 
 /* for mobile, remove % and make projects float down */
 
@@ -130,22 +186,7 @@ header{
     
 }
 
-.projectarea1{
-    background-color:grey;
-    overflow-x:hidden;
-    position:relative;
-    min-height: 35%;
-    max-height: 70%;
-    width: 86%;
-    text-align: center;
-    margin: 0 auto;
-    margin-top: 8vh;
-    margin-bottom: 8vh;
-    border: 2px solid #505654;
-    padding: 5px;
-    border-radius: 20px;
-    display: flex;
-}
+
 
 
 .projectarea2{
